# modal-blobnet

.github/: pull_request_template.md
.github/workflows/: ci.yml  upload.yml
blobnet/: Cargo.toml  build.rs
blobnet/benches/: read_benchmark.rs  sha256_benchmark.rs
blobnet/examples/: preload.rs  put.rs  speed.rs
blobnet/src/: api.proto  client.rs  fast_aio.rs  lib.rs  main.rs  provider.rs  server.rs  statsd.rs  test_provider.rs  utils.rs
blobnet/tests/: cached_test.rs  files_test.rs
