[package]
name = "blobnet"
version = "0.3.8"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "Non-volatile, distributed file cache backed by content-addressed storage."
repository = "https://github.com/modal-labs/blobnet"
documentation = "https://docs.rs/blobnet"
keywords = ["storage", "low-latency", "distributed", "cache"]
categories = ["asynchronous", "network-programming", "filesystem"]
readme = "README.md"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
async-trait = "0.1.58"
auto_impl = "1.0.1"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-types = "0.55.3"
base64 = "0.13.1"
bytes = "1"
cadence = "0.29.1"
cadence-macros = "0.29.1"
clap = { version = "4.0.18", features = ["derive", "env"] }
async-channel = "1.8.0"
fastrand = "1.8.0"
fs2 = "0.4.3"
hashlink = "0.8.1"
hex = "0.4.3"
hyper = { version = "0.14.18", features = ["full"] }
hyperlocal = "0.8.0"
libc = "0.2.139"
named-retry = { path = "../named-retry", version = "0.2.0" }
parking_lot = "0.12.1"
scopeguard = "1.1.0"
sha2 = "0.10.2"
shadow-rs = "0.21.0"
shutdown = "0.2.1"
tempfile = "3.3.0"
tikv-jemallocator = "0.5"
tikv-jemalloc-ctl = "0.5"
thiserror = "1.0.37"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["io"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio", "html_reports"] }
quickcheck = "1.0.3"
rand = { version = "0.8.5", features = ["std", "std_rng"] }

[build-dependencies]
shadow-rs = "0.21.0"

[[bench]]
name = "read_benchmark"
harness = false
